--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-leaf-carousel": "^2.0.0",
+    "react-router": "^5.2.0",
     "react-scripts": "3.4.0",
+    "react-scroll-to-bottom": "^3.0.0",
+    "reactjs-popup": "^1.5.0",
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
