--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.4.6",
     "primereact": "^4.1.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.12.0",
     "react-leaf-carousel": "^2.0.0",
     "react-router": "^5.2.0",
@@ -56,7 +57,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "redux": "^4.0.5"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
